--- a/css/styles.css
+++ b/css/styles.css
@@ -5,6 +5,7 @@
   --color-headings: #1b0760;
   --color-body: #918ca4;
 }
+/* Typography */
 html {
     font-size: 62.5%; /* means 62.5% of 16px = 10px*/
 }
@@ -42,5 +43,28 @@ p {
     }
     h3 {
         font-size: 2.4rem;
+    }
+}
+/*Links*/
+a {
+    text-decoration: none;
+}
+.link-arrow::after {
+    content: "-->"; /*or use an icon*/
+    margin-left: 5px;
+    transition: margin 0.15s;
+}
+.link-arrow:hover::after {
+    margin-left: 10px;
+}
+.link-arrow {
+    font-size: 2rem;
+    color:var(--color-accent);
+    text-transform: uppercase;
+    font-weight: bold;
+}
+@media screen and (min-width:1024px) {
+    .link-arrow {
+        font-size: 1.5rem;
     }
 }
