--- a/css/styles.css
+++ b/css/styles.css
@@ -52,7 +52,7 @@ a {
 .link-arrow::after {
     content: "-->"; /*or use an icon*/
     margin-left: 5px;
-    transition: margin 0.15s;
+    transition: margin 0.15s; /*Slow arrow movement*/
 }
 .link-arrow:hover::after {
     margin-left: 10px;
@@ -66,5 +66,32 @@ a {
 @media screen and (min-width:1024px) {
     .link-arrow {
         font-size: 1.5rem;
+    }
+}
+/*Badges*/
+.badge {
+    border-radius: 20px;
+    font-size: 2rem;
+    font-weight: bold;
+    white-space: nowrap;
+    padding: 0.5rem 2rem;
+}
+.badge--primary {
+    background: var(--color-primary);
+    color:white;
+}
+.badge--secondary {
+    background: var(--color-secondary);
+    color:white;
+}
+.badge--small {
+    font-size: 1.5rem;
+}
+@media screen and (min-width:1024px) {
+    .badge {
+        font-size: 1.5rem;
+    }
+    .badge--small {
+        font-size: 1.2rem;
     }
 }
