--- a/css/styles.css
+++ b/css/styles.css
@@ -95,3 +95,29 @@ a {
         font-size: 1.2rem;
     }
 }
+/*Lists*/
+.list {
+    list-style: none;
+    font-size: 2rem;
+    padding-left: 0;
+}
+.list--inline .list__items {
+    display: inline;
+    margin-right: 2rem;
+}
+.list--tick {
+    padding-left: 3rem;
+    list-style-image: url(../images/tick.png);
+}
+.list__items {
+    color:var(--color-headings);
+}
+.list--tick .list__items {
+    margin-left: 0.5rem;
+    margin-bottom: 1rem;
+}
+@media screen and (min-width:1024px) {
+    .list--tick .list__items {
+        padding-left: 1rem;
+    }
+}
