--- a/css/styles.css
+++ b/css/styles.css
@@ -121,3 +121,21 @@ a {
         padding-left: 1rem;
     }
 }
+/*icons*/
+.icon {
+    width: 40px;
+    height: 40px;
+}
+.icon--primary {
+   fill : var(--color-primary);
+}
+.icon-wrapper {
+    background: #f3f9fa;
+    border-radius: 100%;
+    width: 64px;
+    height: 64px;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+
+}
