--- a/css/styles.css
+++ b/css/styles.css
@@ -1,17 +1,20 @@
 :root {
+  --color-accent: #ff3400;
+  --color-body: #918ca4;
+  --color-headings: #1b0760;
   --color-primary: #2584ff;
   --color-secondary: #00d9ff;
-  --color-accent: #ff3400;
-  --color-headings: #1b0760;
-  --color-body: #918ca4;
+}
+*, *::after, ::before {
+    box-sizing: border-box;
 }
 /* Typography */
 html {
     font-size: 62.5%; /* means 62.5% of 16px = 10px*/
 }
 body {
-    font-family: Inter, sans-serif;
     color: var(--color-body);
+    font-family: Inter, sans-serif;
     font-size: 2.4rem;
     line-height: 1.5; /*1.5 times of the current font size*/
 }
@@ -58,10 +61,10 @@ a {
     margin-left: 10px;
 }
 .link-arrow {
-    font-size: 2rem;
     color:var(--color-accent);
-    text-transform: uppercase;
+    font-size: 2rem;
     font-weight: bold;
+    text-transform: uppercase;
 }
 @media screen and (min-width:1024px) {
     .link-arrow {
@@ -73,8 +76,8 @@ a {
     border-radius: 20px;
     font-size: 2rem;
     font-weight: bold;
-    white-space: nowrap;
     padding: 0.5rem 2rem;
+    white-space: nowrap;
 }
 .badge--primary {
     background: var(--color-primary);
@@ -130,12 +133,55 @@ a {
    fill : var(--color-primary);
 }
 .icon-wrapper {
+    align-items: center;
     background: #f3f9fa;
     border-radius: 100%;
-    width: 64px;
-    height: 64px;
     display: inline-flex;
+    height: 64px;
     justify-content: center;
-    align-items: center;
+    width: 64px;
 
+}
+/*Buttons*/
+.btn {
+    border-radius: 40px;
+    border: 0;
+    cursor: pointer;
+    font-size: 1.8rem;
+    font-weight: bold;
+    padding: 2rem 3rem;
+    text-transform: uppercase;
+    white-space: nowrap;
+    margin: 1rem 0;
+}
+.btn--secondary {
+    background: var(--color-secondary);
+    color: white;
+}
+.btn--secondary:hover {
+    background: #03ccf0 /*prefered to use SAS darker(primary, 10%)*/
+}
+.btn--accent {
+    background: var(--color-accent);
+    color: white;
+}
+.btn--accent:hover {
+    background: rgb(211, 35, 4);  /* prefered to use SAS darker(primary, 10%)*/  
+}
+.btn--outline {
+    background: white;
+    border: 2px solid var(--color-headings);
+    color:var(--color-headings);
+    display: inline-block;
+    text-align: center;
+    width: 100%;
+}
+.btn--outline:hover {
+    background: var(--color-headings);
+    color: white;
+}
+@media screen and (min-width: 1024px) {
+    .btn {
+        font-size: 1.5rem;
+    }
 }
