--- a/css/styles.css
+++ b/css/styles.css
@@ -10,7 +10,7 @@
 }
 /* Typography */
 html {
-    font-size: 62.5%; /* means 62.5% of 16px = 10px*/
+    font-size: 62.5%; /* means 62.5% of 16px(default font size) = 10px*/
 }
 body {
     color: var(--color-body);
@@ -159,14 +159,14 @@ a {
     color: white;
 }
 .btn--secondary:hover {
-    background: #03ccf0 /*prefered to use SAS darker(primary, 10%)*/
+    background: #03ccf0 /*preferred to use SAS darker(primary, 10%)*/
 }
 .btn--accent {
     background: var(--color-accent);
     color: white;
 }
 .btn--accent:hover {
-    background: rgb(211, 35, 4);  /* prefered to use SAS darker(primary, 10%)*/  
+    background: rgb(211, 35, 4);  /* preferred to use SAS darker(primary, 10%)*/  
 }
 .btn--outline {
     background: white;
@@ -182,6 +182,24 @@ a {
 }
 @media screen and (min-width: 1024px) {
     .btn {
+        font-size: 1.5rem;
+    }
+}
+/*inputs*/
+.input {
+    padding: 2rem 3rem;
+    border-radius: 40px;
+    border: 1px solid lightgray;
+    color: var(--color-headings);
+    font-size: 2rem;
+    outline: 0;
+}
+::placeholder {
+    font-size: 1.5rem;
+    color: lightgray;
+}
+@media screen and (min-width:1024px) {
+    .input {
         font-size: 1.5rem;
     }
 }
