--- a/css/styles.css
+++ b/css/styles.css
@@ -14,7 +14,7 @@ html {
 }
 body {
     color: var(--color-body);
-    font-family: Inter, sans-serif;
+    font-family: Inter, Arial, Helvetica, sans-serif;
     font-size: 2.4rem;
     line-height: 1.5; /*1.5 times of the current font size*/
 }
@@ -23,7 +23,7 @@ h1, h2, h3 {
     margin-bottom: 1rem;
 }
 h1 {
-    font-size: 7rem; /*relative size*/
+    font-size: 7rem; /*relative size: 7*10px = 70px*/
 }
 h2 {
     font-size: 4rem;
@@ -48,9 +48,15 @@ p {
         font-size: 2.4rem;
     }
 }
-/*Links*/
+/* Links */
 a {
     text-decoration: none;
+}
+.link-arrow {
+    color:var(--color-accent);
+    font-size: 2rem;
+    font-weight: bold;
+    text-transform: uppercase;
 }
 .link-arrow::after {
     content: "-->"; /*or use an icon*/
@@ -59,12 +65,6 @@ a {
 }
 .link-arrow:hover::after {
     margin-left: 10px;
-}
-.link-arrow {
-    color:var(--color-accent);
-    font-size: 2rem;
-    font-weight: bold;
-    text-transform: uppercase;
 }
 @media screen and (min-width:1024px) {
     .link-arrow {
