--- a/components/inputs.html
+++ b/components/inputs.html
@@ -1,1 +1,6 @@
-<input type="text" placeholder="Enter your domain name here..." class="input">
+<div class="input-group">
+    <input type="text" placeholder="Enter Domain Name Here..." class="input">
+    <button class="btn btn--accent"> <svg class="icon">
+     <use xlink:href="./images/sprite.svg#search"></use>
+ </svg>Search</button>
+</div>
