--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,7 @@
 :root {
   --color-accent: #ff3400;
   --color-body: #918ca4;
+  --color-body-darker: #716d81f5;
   --color-headings: #1b0760;
   --color-primary: #2584ff;
   --color-secondary: #00d9ff;
@@ -322,4 +323,27 @@ a {
 }
 .media__image{
     margin-top: 1rem;;
+}
+/* Quotes */
+.quote {
+    font-size: 3rem;
+    font-style: italic;
+    line-height: 1.5;
+    color: var(--color-body-darker); 
+}
+.quote__text::before{
+    content: open-quote;
+}
+.quote__text::after{
+    content: close-quote;
+}
+.quote__company{
+    font-size: 2rem;
+    color: var(--color-body);
+}
+.quote__author{
+    font-size: 3rem;
+    font-style: normal;
+    font-weight:500;
+    margin-bottom: 0;
 }
