create quote component

--- a/components/quotes.html
+++ b/components/quotes.html
@@ -1,5 +1,8 @@
 <blockquote style="width: 50%;" class="quote">
-    <p class="quote__text"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero, sit commodi magnam iusto error dolor necessitatibus repellat sequi aliquam minus!</p>
+    <p class="quote__text"> Lorem ipsum dolor sit 
+        amet consectetur adipisicing elit. Vero,
+        sit commodi magnam iusto error dolor necessitatibus 
+        repellat sequi aliquam minus!</p>
     <footer>
         <div class="media">
             <div class="media__image">
